--- a/src/components/App/App.module.css
+++ b/src/components/App/App.module.css
@@ -1,3 +1,10 @@
-p {
-    margin: 0;
+#root {
+    max-width: 1280px;
+    margin: 0 auto;
+    padding: 2rem;
+    text-align: center;
+}
+
+.container {
+    padding: 16px;
 }
