--- a/src/components/ContactForm/ContactForm.module.css
+++ b/src/components/ContactForm/ContactForm.module.css
@@ -1,34 +1,45 @@
 .form {
     display: flex;
     flex-direction: column;
-    width: 300px;
-    margin-bottom: 32px;
+    gap: 8px;
+    max-width: 300px;
+    padding: 8px;
     border: 1px solid black;
-    border-radius: 8px;
-    padding: 10px 8px;
+    margin-bottom: 16px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
-.label {
-    margin-bottom: 6px;
-}
-
-.inputBox {
+.formContainer {
     display: flex;
     flex-direction: column;
-
-    margin-bottom: 16px;
 }
 
-.btnAdd {
-    width: fit-content;
-    padding: 8px 10px;
-    margin: 0 auto;
+.form_field {
+    height: 20px;
+}
+
+.addCntBtn {
     cursor: pointer;
-
+    color: black;
+    text-align: center;
+    font-family: inherit;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    max-width: 150px;
+    display: inline-block;
+    border: 1px solid black;
+    border-radius: 4px;
+    margin: 15px auto;
+    transition-property: border-color;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.error {
-    font-size: 11px;
-    color: red;
-    margin-top: 8px;
+.addCntBtn:hover,
+.addCntBtn:focus {
+    border-color: black;
+    outline: none;
 }
