--- a/src/components/ContactList/ContactList.module.css
+++ b/src/components/ContactList/ContactList.module.css
@@ -1,20 +1,6 @@
-.list {
+.contact_list {
     display: flex;
+    gap: 16px;
     flex-wrap: wrap;
-    padding: 0;
-    gap: 12px;
-}
-
-.contactItem {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-
-    border: 1px solid black;
-    border-radius: 4px;
-
-    padding: 8px 12px;
-    width: 280px;
-
-    background-color: #fff;
+    justify-content: flex-start;
 }
