--- a/src/components/SearchBox/SearchBox.module.css
+++ b/src/components/SearchBox/SearchBox.module.css
@@ -1,11 +1,11 @@
-.searchBox {
-    display: flex;
-    flex-direction: column;
-    width: 318px;
-    padding: 0;
-    margin-bottom: 32px;
+.search_container {
+    margin-bottom: 16px;
+    max-width: 300px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
-.label {
-    margin-bottom: 6px;
+.search_field {
+    width: 100%;
+    height: 30px;
 }
